// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/appState add property field (already exists) 1`] = `
Object {
  "addProperty": Object {
    "fields": Object {
      "address": "",
      "allow_criminal_records": false,
      "application_fee": 0,
      "background_screening_company": "",
      "bathrooms": 0,
      "bedrooms": 0,
      "bus_line": false,
      "contact_method": Array [],
      "credit_screening_company": "",
      "date_first_available": "2020-06-18",
      "deposit": 0,
      "elevator": false,
      "floor": 0,
      "has_basement": false,
      "housing_type": "",
      "is_available": false,
      "landlord_id": null,
      "last_contact_date": "2020-06-18",
      "last_contacted_by": null,
      "last_month_rent_required": false,
      "listing_date": "2020-06-18",
      "monthly_rent": 0,
      "navigator_id": null,
      "potential_month_available": 0,
      "property_name": "new prop test",
      "school_district": "",
      "shared_bathrooms": 0,
      "unit_apt_no": "",
      "voucher_type_accepted": Array [],
      "voucher_type_not_accepted": Array [],
      "wheelchair_accessibility": false,
      "where_listed": Array [],
      "year_available": 2020,
      "zip_code": "",
    },
  },
  "error": "",
}
`;

exports[`reducers/appState add property field (doesnt already exist) 1`] = `
Object {
  "addProperty": Object {
    "fields": Object {
      "address": "",
      "allow_criminal_records": false,
      "application_fee": 0,
      "background_screening_company": "",
      "bathrooms": 0,
      "bedrooms": 0,
      "bus_line": false,
      "contact_method": Array [],
      "credit_screening_company": "",
      "date_first_available": "2020-06-18",
      "deposit": 0,
      "elevator": false,
      "floor": 0,
      "has_basement": false,
      "housing_type": "",
      "is_available": false,
      "landlord_id": null,
      "last_contact_date": "2020-06-18",
      "last_contacted_by": null,
      "last_month_rent_required": false,
      "listing_date": "2020-06-18",
      "monthly_rent": 0,
      "navigator_id": null,
      "potential_month_available": 0,
      "property_name": "",
      "school_district": "",
      "shared_bathrooms": 0,
      "test field": "new test value",
      "unit_apt_no": "",
      "voucher_type_accepted": Array [],
      "voucher_type_not_accepted": Array [],
      "wheelchair_accessibility": false,
      "where_listed": Array [],
      "year_available": 2020,
      "zip_code": "",
    },
  },
  "error": "",
}
`;

exports[`reducers/appState add property field (is array and already exists) 1`] = `
Object {
  "addProperty": Object {
    "fields": Object {
      "address": "",
      "allow_criminal_records": false,
      "application_fee": 0,
      "background_screening_company": "",
      "bathrooms": 0,
      "bedrooms": 0,
      "bus_line": false,
      "contact_method": Array [],
      "credit_screening_company": "",
      "date_first_available": "2020-06-18",
      "deposit": 0,
      "elevator": false,
      "floor": 0,
      "has_basement": false,
      "housing_type": "",
      "is_available": false,
      "landlord_id": null,
      "last_contact_date": "2020-06-18",
      "last_contacted_by": null,
      "last_month_rent_required": false,
      "listing_date": "2020-06-18",
      "monthly_rent": 0,
      "navigator_id": null,
      "potential_month_available": 0,
      "property_name": "",
      "school_district": "",
      "shared_bathrooms": 0,
      "unit_apt_no": "",
      "voucher_type_accepted": Array [],
      "voucher_type_not_accepted": Array [],
      "wheelchair_accessibility": false,
      "where_listed": Array [
        "new prop test",
      ],
      "year_available": 2020,
      "zip_code": "",
    },
  },
  "error": "",
}
`;

exports[`reducers/appState set new prop 1`] = `
Object {
  "addProperty": Object {
    "fields": Object {
      "address": "",
      "allow_criminal_records": false,
      "application_fee": 0,
      "background_screening_company": "",
      "bathrooms": 0,
      "bedrooms": 0,
      "bus_line": false,
      "contact_method": Array [],
      "credit_screening_company": "",
      "date_first_available": "2020-06-18",
      "deposit": 0,
      "elevator": false,
      "floor": 0,
      "has_basement": false,
      "housing_type": "",
      "is_available": false,
      "landlord_id": null,
      "last_contact_date": "2020-06-18",
      "last_contacted_by": null,
      "last_month_rent_required": false,
      "listing_date": "2020-06-18",
      "monthly_rent": 0,
      "navigator_id": null,
      "potential_month_available": 0,
      "property_name": "",
      "school_district": "",
      "shared_bathrooms": 0,
      "unit_apt_no": "",
      "voucher_type_accepted": Array [],
      "voucher_type_not_accepted": Array [],
      "wheelchair_accessibility": false,
      "where_listed": Array [],
      "year_available": 2020,
      "zip_code": "",
    },
  },
  "error": "",
  "id": "test id",
}
`;

exports[`reducers/appState set new prop failure 1`] = `
Object {
  "addProperty": Object {
    "fields": Object {
      "address": "",
      "allow_criminal_records": false,
      "application_fee": 0,
      "background_screening_company": "",
      "bathrooms": 0,
      "bedrooms": 0,
      "bus_line": false,
      "contact_method": Array [],
      "credit_screening_company": "",
      "date_first_available": "2020-06-18",
      "deposit": 0,
      "elevator": false,
      "floor": 0,
      "has_basement": false,
      "housing_type": "",
      "is_available": false,
      "landlord_id": null,
      "last_contact_date": "2020-06-18",
      "last_contacted_by": null,
      "last_month_rent_required": false,
      "listing_date": "2020-06-18",
      "monthly_rent": 0,
      "navigator_id": null,
      "potential_month_available": 0,
      "property_name": "",
      "school_district": "",
      "shared_bathrooms": 0,
      "unit_apt_no": "",
      "voucher_type_accepted": Array [],
      "voucher_type_not_accepted": Array [],
      "wheelchair_accessibility": false,
      "where_listed": Array [],
      "year_available": 2020,
      "zip_code": "",
    },
  },
  "error": "new prop error",
}
`;
